Overflow fixed

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
     flex-direction: column;
     min-height: 100vh;
     background: var(--Dark_Grayish_Blue);
+    overflow: hidden;
 }
 
 .wrapper{
